Updating dashboard page: - Moved CAPLIN logo to be above link to website - Added BladeRunnerJS logo to bottom right above the version - Added tooltips for footer hyperlinks - Changed BladeRunner -> BladeRunnerJS - Updated 'Developer Website' link to go to http://bladerunnerjs.org/

--- a/cutlass-sdk/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/root.html
+++ b/cutlass-sdk/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/root.html
@@ -4,9 +4,9 @@
 		<!-- TODO: convert back to nav -->
 		<div id="topnav">
 			<ul>
-				<li><a href="../#" data-bind="css:{selected:isSDKSectionSelected}">BladeRunner</a></li>
+				<li><a href="../#" data-bind="css:{selected:isSDKSectionSelected}"><b>BladeRunner</b>JS</a></li>
 				<li><a href="../#note/latest" class="noborder" data-bind="css:{selected:isSupportSectionSelected}">Release Notes</a></li>
-				<li><a href="http://www.caplin.com/developer" class="newsite" target="_blank">Developer Site</a></li>
+				<li><a href="http://bladerunnerjs.org" class="newsite" target="_blank">Developer Website</a></li>
 			</ul>
 		</div>
 		
@@ -31,14 +31,14 @@
 		<div class="footer-wrap">
 			<div id="footer-section">
 				<div id="botnav">
-					<ul>
-						<li><a href="http://www.caplin.com" target="_blank">www.caplin.com</a></li>
-					</ul>
+                    <div class="caplin-logo-small">
+                        <a title="Visit Caplin Website" href="http://www.caplin.com" target="_blank">www.caplin.com</a>
+                    </div>
 				</div>
 			</div>
 			
 			<div class="footer-logo">
-				<a href="../#note/latest">Version: <span data-bind="text:sdkVersion"></span></a>
+				<a href="../#note/latest" title="View Release Notes">Version: <span data-bind="text:sdkVersion"></span></a>
 			</div>
 		</div>
 	</div>
