Updating JS Doc page to be consistent with the changes made to the dashboard - BladeRunner -> BladeRunnerJS - Link Developer Website to bladerunnerjs.org

--- a/cutlass-libraries/jsdoc-templates/Caplin/template-includes/header.html
+++ b/cutlass-libraries/jsdoc-templates/Caplin/template-includes/header.html
@@ -19,11 +19,10 @@
 		<header>
 			<div id="topnav">
 				<ul>
-					<li><a href="/#">BladeRunner</a></li>
+					<li><a href="/#"><b>BladeRunner</b>JS</a></li>
 					<li><a href="/dashboard-services/jsdoc/index.html" class='selected'>API Docs</a></li>
 					<li><a href="/#note/latest" class="noborder">Release Notes</a></li>
-					<li><a href="/live-examples" class="popout" target="_blank">Live Examples</a></li>
-					<li><a href="http://www.caplin.com/developer" target="_blank">Developer Site</a></li>
+					<li><a href="http://bladerunnerjs.org" target="_blank">Developer Site</a></li>
 				</ul>
 			</div>
 			<br class="clearfloat">
