#172 updating the splash screen so that 'Extend' also has the icon beside it for consistency

--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/apps-screen/splash-screen.html
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/apps-screen/splash-screen.html
@@ -7,7 +7,7 @@
       <ul>
         <li><a href="http://bladerunnerjs.org/docs/use/getting_started" target="_blank">BladeRunnerJS getting started guide</a></li>
       </ul> 
-      <h2 id="extend">Extend</h2>
+      <h2 id="extend" class="learn">Extend</h2>
       <ul>
         <li><a href="http://bladerunnerjs.org/docs/extend/command_plugin_tutorial/">CommandPlugin tutorial</a></li>
       </ul> 
