--- a/brjs-core/jsdoc-resources/jsdoc-templates/Caplin/template-includes/header.html
+++ b/brjs-core/jsdoc-resources/jsdoc-templates/Caplin/template-includes/header.html
@@ -42,10 +42,9 @@
 		<header>
 			<div id="topnav">
 				<ul>
-					<li><a href="/#">BladeRunner</a></li>
+					<li><a href="/#"><b>BladeRunner</b>JS</a></li>
 					<li><a href="/#note/latest" class="noborder">Release Notes</a></li>
-					<li><a href="/live-examples" class="popout" target="_blank">Live Examples</a></li>
-					<li><a href="http://www.caplin.com/developer" target="_blank">Developer Site</a></li>
+					<li><a href="http://bladerunnerjs.org/" target="_blank">Developer Site</a></li>
 				</ul>
 			</div>
 			<br class="clearfloat">
