removing release notes file and adding a hyperlink to GitHub release pages

--- a/brjs-core/jsdoc-resources/jsdoc-templates/Caplin/template-includes/header.html
+++ b/brjs-core/jsdoc-resources/jsdoc-templates/Caplin/template-includes/header.html
@@ -43,7 +43,7 @@
 			<div id="topnav">
 				<ul>
 					<li><a href="/#"><b>BladeRunner</b>JS</a></li>
-					<li><a href="/#note/latest" class="noborder">Release Notes</a></li>
+					<li><a href="http://github.com/BladeRunnerJS/brjs/releases" target="_blank">Release Notes</a></li>
 					<li><a href="http://bladerunnerjs.org/" target="_blank">Developer Site</a></li>
 				</ul>
 			</div>
