--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/root.html
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/root.html
@@ -5,7 +5,7 @@
 		<div id="topnav">
 			<ul>
 				<li><a href="../#" data-bind="css:{selected:isSDKSectionSelected}"><b>BladeRunner</b>JS</a></li>
-				<li><a href="../#note/latest" class="noborder" data-bind="css:{selected:isSupportSectionSelected}">Release Notes</a></li>
+				<li><a href="http://github.com/BladeRunnerJS/brjs/releases" class="newsite" target="_blank">Release Notes</a></li>
 				<li><a href="http://bladerunnerjs.org" class="newsite" target="_blank">Developer Website</a></li>
 			</ul>
 		</div>
@@ -38,7 +38,7 @@
 			</div>
 			
 			<div class="footer-logo">
-				<a href="../#note/latest" title="View Release Notes">Version: <span data-bind="text:sdkVersion"></span></a>
+				<a href="http://github.com/BladeRunnerJS/brjs/releases" title="View Release Notes">Version: <span data-bind="text:sdkVersion"></span></a>
 			</div>
 		</div>
 	</div>
