Fixing broken release note link in splash screen which wasn't updated

--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/apps-screen/splash-screen.html
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/apps-screen/splash-screen.html
@@ -13,7 +13,7 @@
       </ul> 
       <h2 id="whats-new" class="learn">What's New?</h2>
       <ul>
-        <li><a href="../#note/latest">See the latest release note</a></li>
+        <li><a href="http://github.com/BladeRunnerJS/brjs/releases">See the latest release note</a></li>
       </ul>
 		</section>
 		<section id="section-right">
