@Ignore updating some references to BladeRunner -> BladeRunnerJS (low risk changes)

--- a/brjs-core/jsdoc-resources/jsdoc-templates/Caplin/homepage-content.html
+++ b/brjs-core/jsdoc-resources/jsdoc-templates/Caplin/homepage-content.html
@@ -4,7 +4,7 @@
 	<h1>Caplin JavaScript Libraries API Documentation</h1>
 	
 	<p>This documentation contains details of all JavaScript library code that is shipped with CaplinTrader.
-	The following packages are available with BladeRunner:
+	The following packages are available with BladeRunnerJS:
 	</p>
 
 	<ul>
