renamed index.js to browser-modules.js.  Added a little bit to the README.md

--- a/experiment.html
+++ b/experiment.html
@@ -3,7 +3,7 @@
 	<title>browser-modules experiment</title>
 </head>
 <body>
-	<script type="text/javascript" src="index.js"></script>
+	<script type="text/javascript" src="browser-modules.js"></script>
 	<script type="text/javascript" src="install.js"></script>
 
 	<script>
