Converted the 'caplin-br' library into a proper BladeRunnerJS library -- this is causing lots of errors at the moment, but checking in so the team can work on it at the same time.

--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/default-aspect/index.html
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/default-aspect/index.html
@@ -4,7 +4,7 @@
 		<base href="@APP.VERSION@"/>
 		<title>BladeRunner Dashboard</title>
 		<@css.bundle theme="standard"@/>
-		<@js.bundle@/>
+		<@new-js.bundle dev-minifier="combined"@/>
 		<link rel="shortcut icon" href="favicon.ico">
 		<link type="text/css" rel="stylesheet" media="screen" href="unbundled-resources/standard-theme/typography.css" />
 		<script type="text/javascript" src="unbundled-resources/browserCheck.js"></script>
