Require 'br' in the index page to prevent a script error at this point.

--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/default-aspect/index.html
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/default-aspect/index.html
@@ -10,7 +10,8 @@
 		<script type="text/javascript" src="unbundled-resources/browserCheck.js"></script>
 		<script type="text/javascript" src="unbundled-resources/releaseNoteUtils.js"></script>
 		<script type="text/javascript">
-		
+			var br = require('br/index');
+			
 			br.thirdparty("jquery");
 			br.thirdparty("wolf-simple-box");
 			
