Temporarily added some testing infrastructure code, since we are currently pulling in testing libraries that we don't need or want.

--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/default-aspect/index.html
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/default-aspect/index.html
@@ -8,6 +8,16 @@
 		<@css.bundle theme="standard"@/>
 		<link type="text/css" rel="stylesheet" media="screen" href="unbundled-resources/standard-theme/typography.css" />
 		
+		<!-- TODO: remove this script block once we remove unquoted require paths from the trie -->
+		<script type="text/javascript">
+			function TestCase() {
+			}
+			jstestdriver = {
+				pluginRegistrar:{
+					register:function(){}
+				}
+			};
+		</script>
 		<@new-js.bundle dev-minifier="combined"@/>
 		<script type="text/javascript" src="unbundled-resources/browserCheck.js"></script>
 		<script type="text/javascript" src="unbundled-resources/releaseNoteUtils.js"></script>
