Start using the new js bundler everywhere, using the temporary new tag name -- we will switch back to the old name once we've deleted the old bundlers.

--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/workbench/index.html
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/workbench/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Dashboard Workbench</title>
 		<@css.bundle theme="standard"@/>
-		<@js.bundle@/>
+		<@new-js.bundle dev-minifier="combined"@/>
 		<@i18n.bundle@/>
 		<link type="text/css" rel="stylesheet" media="screen" href="../../../../unbundled-resources/standard-theme/typography.css" />
 		<script type="text/javascript">
