changing ids of some views so they have the correct prefix

--- a/cutlass-sdk/workspace/sdk/libs/javascript/caplin/resources/br/workbench/ChartRequestEditor.html
+++ b/cutlass-sdk/workspace/sdk/libs/javascript/caplin/resources/br/workbench/ChartRequestEditor.html
@@ -1,4 +1,4 @@
-<div id='chart-request-editor' class='chart-request-editor'>
+<div id='br.chart-request-editor' class='chart-request-editor'>
 
 	<dl>
 		<dt><label data-bind='text: seriesTypeLabel'></label></dt>
