--- a/cutlass-sdk/workspace/sdk/libs/javascript/caplin/resources/br/workbench/workbench-mini-trade.html
+++ b/cutlass-sdk/workspace/sdk/libs/javascript/caplin/resources/br/workbench/workbench-mini-trade.html
@@ -1,4 +1,4 @@
-<div id="workbench-mini-trade">
+<div id="br.workbench-mini-trade">
 	<div>
 		<button class="execute-btn" data-bind="click:executeTrade">Execute</button>
 	</div>
