--- a/cutlass-sdk/workspace/sdk/libs/javascript/caplin/resources/br/workbench/workbench_connection_editor.html
+++ b/cutlass-sdk/workspace/sdk/libs/javascript/caplin/resources/br/workbench/workbench_connection_editor.html
@@ -1,4 +1,4 @@
-<div id="workbench-connection-editor">
+<div id="br.workbench-connection-editor">
 <div class="permission-editor-container">
 	<div data-bind="template: {name: 'workbench-connection-button', foreach:buttons }"></div>
 </div>
