removed caplin and changed link text to brjs site

--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/root.html
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/root.html
@@ -6,7 +6,7 @@
 			<ul>
 				<li><a href="../#" data-bind="css:{selected:isSDKSectionSelected}"><b>BladeRunner</b>JS</a></li>
 				<li><a href="http://github.com/BladeRunnerJS/brjs/releases" class="newsite" target="_blank">Release Notes</a></li>
-				<li><a href="http://bladerunnerjs.org" class="newsite" target="_blank">Developer Website</a></li>
+				<li><a href="http://bladerunnerjs.org" class="newsite" target="_blank">BRJS Website</a></li>
 			</ul>
 		</div>
 		
@@ -29,14 +29,7 @@
 		</div>
 		
 		<div class="footer-wrap">
-			<div id="footer-section">
-				<div id="botnav">
-                    <div class="caplin-logo-small">
-                        <a title="Visit Caplin Website" href="http://www.caplin.com" target="_blank">www.caplin.com</a>
-                    </div>
-				</div>
-			</div>
-			
+						
 			<div class="footer-logo">
 				<a href="http://github.com/BladeRunnerJS/brjs/releases" title="View Release Notes">Version: <span data-bind="text:sdkVersion"></span></a>
 			</div>
