Minor change to the dashboard title from 'BladeRunner Dashboard' -> 'BladeRunnerJS Dashboard'

--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/default-aspect/index.html
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/default-aspect/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<base href="@APP.VERSION@"/>
-		<title>BladeRunner Dashboard</title>
+		<title>BladeRunnerJS Dashboard</title>
 		<link rel="shortcut icon" href="favicon.ico">
 		
 		<@css.bundle theme="standard"@/>
