--- a/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/test/tests/test-acceptance/js-test-driver/resources/unbundled-html/view-fixture-harness.html
+++ b/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/test/tests/test-acceptance/js-test-driver/resources/unbundled-html/view-fixture-harness.html
@@ -1,4 +1,4 @@
-<html>
+<html id="view-fixture-harness">
 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
