--- a/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/workbench/resources/workbench/workbench-event-logger.html
+++ b/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/workbench/resources/workbench/workbench-event-logger.html
@@ -1,4 +1,4 @@
-<script id="br.workbench-event-logger" type="text/html">
+<script id="br.workbench.event-logger" type="text/html">
 <div>
 	<button class="btn" data-bind="click:clear">Clear Log</button>
 	<div class="messagelog" data-bind="foreach: messages">
