--- a/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/workbench/resources/workbench/workbench_state_visualiser.html
+++ b/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/workbench/resources/workbench/workbench_state_visualiser.html
@@ -1,4 +1,4 @@
-<div id="br.workbench-state-visualiser">
+<div id="br.workbench.state-visualiser">
 
 	<div class="state_control">
 		<div data-bind="template:{ name: 'workbench-toggle-switch', data:autoEvents}"></div>
@@ -15,7 +15,7 @@
 
 </div>
 
-<div id="br.workbench-single-state-visualiser"> 
+<div id="br.workbench.single-state-visualiser">
 	<div>
 		<div class="data-fields" data-bind="visible:dataFieldVisible">
 			<div data-bind="template:{ name: 'workbench-field-trade-section', foreach:tradeSections}"></div>
@@ -26,14 +26,14 @@
 	</div>
 </div>
 
-<div id="br.workbench-field-trade-section">
+<div id="br.workbench.field-trade-section">
 	<div>
 		<label data-bind="text:sectionName"></label>
 		<div data-bind="template:{name:'quickform'}"></div>
 	</div>
 </div>
 
-<div id="br.workbench-toggle-switch"> 
+<div id="br.workbench.toggle-switch">
 	<div>
 		<div class="toggle-switch" data-bind="css: value">
 			<div data-bind="click:click, template:{ name: 'workbench-toggle-switch-label', foreach:options}"></div>
@@ -43,6 +43,6 @@
 	</div>
 </div>
 
-<div id="br.workbench-toggle-switch-label">	
+<div id="br.workbench.toggle-switch-label">
 	<span data-bind="text:label, attr: { title: label }"></span>
 </div>
