--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/root.html
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/root.html
@@ -2,37 +2,29 @@
 	<div data-bind="attr:{'class':currentSection}">
 
 		<!-- TODO: convert back to nav -->
-		<div id="topnav">
-			<ul>
-				<li><a href="../#" data-bind="css:{selected:isSDKSectionSelected}"><b>BladeRunner</b>JS</a></li>
-				<li><a href="http://github.com/BladeRunnerJS/brjs/releases" class="newsite" target="_blank">Release Notes</a></li>
-				<li><a href="http://bladerunnerjs.org" class="newsite" target="_blank">BRJS Website</a></li>
-			</ul>
-		</div>
-		
+		<div id="topnav" data-bind="template:{name:'caplinx.dashboard.app.nav'}"></div>
+
 		<div class="subnav" data-bind="visible:crumbtrail.visible, template:{data:crumbtrail, name:'caplinx.dashboard.app.crumbtrail'}"></div>
-		
+
 		<div class="loadingIndicator" data-bind="text:loadingText, visible:isLoading"></div>
-		
+
 		<div id="screen">
 			<div id="appsScreen" data-bind="visible:appsScreen.visible, template:{data:appsScreen, name:'caplinx.dashboard.app.apps-screen'}"></div>
-			
+
 			<div id="appDetailScreen" data-bind="visible:appDetailScreen.visible, template:{data:appDetailScreen, name:'caplinx.dashboard.app.app-detail-screen'}"></div>
-			
+
 			<div id="workbenchScreen" data-bind="visible:workbenchScreen.visible, template:{data:workbenchScreen, name:'caplinx.dashboard.app.workbench-screen'}"></div>
-			
+
 			<div id="releaseNoteScreen" data-bind="visible:releaseNoteScreen.visible, template:{data:releaseNoteScreen, name:'caplinx.dashboard.app.release-note-screen'}"></div>
 		</div>
-		
+
 		<div id="modalDialogWrapper">
 			<div id="modalDialog" data-bind="template:{name:dialog.viewNode.getTemplateName, foreach:dialog.viewNode}"></div>
 		</div>
-		
+
 		<div class="footer-wrap">
-						
-			<div class="footer-logo">
-				<a href="http://github.com/BladeRunnerJS/brjs/releases" title="View Release Notes">Version: <span data-bind="text:sdkVersion"></span></a>
-			</div>
+			<div class="footer-left" data-bind="template:{name:'caplinx.dashboard.app.footer-left'}"></div>
+			<div class="footer-right" data-bind="template:{name:'caplinx.dashboard.app.footer-right'}"></div>
 		</div>
 	</div>
 </div>
