--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/default-aspect/index.html
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/default-aspect/index.html
@@ -5,11 +5,11 @@
 		<link rel="shortcut icon" href="favicon.ico">
 		
 		<@css.bundle theme="standard"@/>
-		<link type="text/css" rel="stylesheet" media="screen" href="unbundled-resources/standard-theme/typography.css" />
+		<link type="text/css" rel="stylesheet" media="screen" href="../v/dev/unbundled-resources/standard-theme/typography.css" />
 
 		<@js.bundle dev-minifier="combined"@/>
-		<script type="text/javascript" src="unbundled-resources/browserCheck.js"></script>
-		<script type="text/javascript" src="unbundled-resources/releaseNoteUtils.js"></script>
+		<script type="text/javascript" src="../v/dev/unbundled-resources/browserCheck.js"></script>
+		<script type="text/javascript" src="../v/dev/unbundled-resources/releaseNoteUtils.js"></script>
 		
 		<script type="text/javascript">
 			br.Core.thirdparty("jquery");
@@ -27,7 +27,7 @@
 				caplinx.dashboard.app.DashboardApp.initializeLibrary();
 				
 				var oDashboardService = new caplinx.dashboard.app.service.dashboard.DashboardProvider(
-					new caplinx.dashboard.app.service.request.XHRFactory(), "servlet/app-manager");
+					new caplinx.dashboard.app.service.request.XHRFactory(), "../servlet/app-manager");
 				var oPageUrlService = new caplinx.dashboard.app.service.url.PageUrlProvider();
 				var oWindowOpenerService = new caplinx.dashboard.app.service.window.WindowOpenerProvider();
 				var oBrowserDetector = new caplinx.dashboard.app.service.browserdetector.BrowserDetector();
