--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/root.html
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/root.html
@@ -13,7 +13,7 @@
 
 			<div id="appDetailScreen" data-bind="visible:appDetailScreen.visible, template:{data:appDetailScreen, name:'brjs.dashboard.app.app-detail-screen'}"></div>
 
-			<div id="workbenchScreen" data-bind="visible:workbenchScreen.visible, template:{data:workbenchScreen, name:'brjs.dashboard.app.workbench-screen'}"></div>
+			<!--<div id="workbenchScreen" data-bind="visible:workbenchScreen.visible, template:{data:workbenchScreen, name:'brjs.dashboard.app.workbench-screen'}"></div>-->
 
 			<div id="releaseNoteScreen" data-bind="visible:releaseNoteScreen.visible, template:{data:releaseNoteScreen, name:'brjs.dashboard.app.release-note-screen'}"></div>
 		</div>
