Updating HTMLResource test to take into accounts templates within template tag.

--- a/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/services/tests/test-unit/js-test-driver/resources/html/resource.html
+++ b/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/services/tests/test-unit/js-test-driver/resources/html/resource.html
@@ -1,3 +1,8 @@
 <div id="br.services.template1">some html1</div>
 <div id="br.services.template2">some html2</div>
 <script type="text/html" id="br.services.testing-template"><div>Script</div></script>
+
+<template id="br.services.template3">some html3</template>
+<template id="br.services.template4"><div>some html4</div></template>
+<template id="br.services.template5"><div>some html5</div><div>some html51</div></template>
+<template id="br.services.template6"><div>some html6<div>some html61</div></div></template>
