creating jsdocs and including them in the SDK

--- a/brjs-core/jsdoc-resources/jsdoc-templates/Caplin/template-includes/header.html
+++ b/brjs-core/jsdoc-resources/jsdoc-templates/Caplin/template-includes/header.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="static/style-overrides.css" />
 		<link rel="stylesheet" type="text/css" href="static/crumbtrail.css" />
 		<link rel="stylesheet" type="text/css" href="static/regenerateDocs.css" />
+		<link rel="stylesheet" type="text/css" href="static/hosted-docs.css" />
 
 		<script>
 			function getAppName() 
@@ -42,7 +43,7 @@
 		<header>
 			<div id="topnav">
 				<ul>
-					<li><a href="/#"><b>BladeRunner</b>JS</a></li>
+					<li class="dashboard-link"><a href="/#"><b>BladeRunner</b>JS</a></li>
 					<li><a href="http://github.com/BladeRunnerJS/brjs/releases" target="_blank">Release Notes</a></li>
 					<li><a href="http://bladerunnerjs.org/" target="_blank">Developer Site</a></li>
 				</ul>
