changing BRJS website link text so its the same on the dashboard and docs

--- a/brjs-core/jsdoc-resources/jsdoc-templates/Caplin/template-includes/header.html
+++ b/brjs-core/jsdoc-resources/jsdoc-templates/Caplin/template-includes/header.html
@@ -45,7 +45,7 @@
 				<ul>
 					<li class="dashboard-link"><a href="/#"><b>BladeRunner</b>JS</a></li>
 					<li><a href="http://github.com/BladeRunnerJS/brjs/releases" target="_blank">Release Notes</a></li>
-					<li><a href="http://bladerunnerjs.org/" target="_blank">Developer Site</a></li>
+					<li><a href="http://bladerunnerjs.org/" target="_blank">BladeRunnerJS.org</a></li>
 				</ul>
 			</div>
 			<br class="clearfloat">
