--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/nav.html
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/resources/html/nav.html
@@ -2,6 +2,6 @@
   <ul>
 				<li><a href="#" data-bind="css:{selected:isSDKSectionSelected}"><b>BladeRunner</b>JS</a></li>
 				<li><a href="http://github.com/BladeRunnerJS/brjs/releases" class="newsite" target="_blank">Release Notes</a></li>
-				<li><a href="http://bladerunnerjs.org" class="newsite" target="_blank">BRJS Website</a></li>
+				<li><a href="http://bladerunnerjs.org" class="newsite" target="_blank">BladeRunnerJS.org</a></li>
 	</ul>
 </div>
