fix typo in JsDoc template

--- a/brjs-core/jsdoc-resources/jsdoc-templates/Caplin/initial-content.html
+++ b/brjs-core/jsdoc-resources/jsdoc-templates/Caplin/initial-content.html
@@ -4,7 +4,7 @@
 	<h1>JsDoc API Documentation</h1>
 	
 	<p>
-		Click the tree on the left to start navigating through all the JsDoc documentaion. 
+		Click the tree on the left to start navigating through all the JsDoc documentation. 
 		More information on BRJS classes can be found on the <a href="http://bladerunnerjs.org/docs/">BladeRunnerJS docs site</a>.
 	</p>
 	
