adding tests for changes regarding ToggleSwitchControl.js

--- a/brjs-sdk/workspace/sdk/libs/javascript/br-presenter/tests/test-acceptance/js-test-driver/resources/html/test-form.html
+++ b/brjs-sdk/workspace/sdk/libs/javascript/br-presenter/tests/test-acceptance/js-test-driver/resources/html/test-form.html
@@ -9,6 +9,7 @@
 	<div id="toggleSwitch1" data-bind="control:'br.toggle-switch',value:selectionField" ></div>
 	<div id="toggleSwitch2" data-bind="control:'br.toggle-switch',value:selectionFieldDefaultedToSecondValue" ></div>
 	<div id="toggleSwitch3" data-bind="control:'br.toggle-switch',value:selectionFieldInitiallyDisabledAndHidden" ></div>
+	<div id="toggleSwitch4" data-bind="control:'br.toggle-switch',value:labelValueSelectionField" ></div>
 
 	<div id="dropDownSelectBox"  data-bind="control:'br.select-box',controlOptions:{width:95},value:selectionField"></div>
 	<div id="dropDownSelectBox2"  data-bind="control:'br.select-box',controlOptions:{width:95},value:selectionFieldDefaultedToSecondValue"></div>
