changing the model so URLs work with the new base tag

--- a/brjs-sdk/workspace/sdk/system-applications/dashboard/default-aspect/index.html
+++ b/brjs-sdk/workspace/sdk/system-applications/dashboard/default-aspect/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<@base.tag@/>
 		<title>BladeRunnerJS Dashboard</title>
 		<link rel="shortcut icon" href="favicon.ico">
 
