--- a/brjs-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/workbench/index.html
+++ b/brjs-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/workbench/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<@base.tag@/>
 		<title>Dashboard Workbench</title>
 		<@css.bundle theme="standard"@/>
 		<@js.bundle dev-minifier="combined"@/>
 		<@i18n.bundle@/>
 		<link type="text/css" rel="stylesheet" media="screen" href="../../../../unbundled-resources/standard-theme/typography.css" />
 		<script type="text/javascript">
-			br.thirdparty("jquery");
+			br.Core.thirdparty("jquery");
 		
 			var oApp;
 			var oDashboardService;
