Renamed JsTreeModelFactory to KnockoutJsTreeModelFactory, and created a PresenterJsTreeModelFactory to complement it. Updated the dashboard workbench page to use the PresenterJsTreeModelFactory, since otherwise we don't have any working examples of this code.

--- a/brjs-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/workbench/index.html
+++ b/brjs-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/workbench/index.html
@@ -24,6 +24,8 @@
 				var oDummyBrowserDetector = new brjs.dashboard.app.service.browserdetector.BrowserDetector();
 				
 				oApp = new brjs.dashboard.app.DashboardApp(oDashboardService, oPageUrlService, oWindowOpenerService, document.body, oDummyLocalStorage, oDummyBrowserDetector);
+				
+				addModelViewer(oApp.m_oPresentationModel);
 			});
 			
 			function onControlPanelClicked()
@@ -44,6 +46,13 @@
 				oApp.m_oInvalidBrowserDecider.isValidBrowser = function(){ return false }
 				oApp._showBrowserWarningDialogIfNeeded();
 			}
+			
+			function addModelViewer( model, workbench ) {
+				var PresenterJsTreeModelFactory = require('br/presenter/workbench/ui/PresenterJsTreeModelFactory');
+				var PresentationModelViewer2 = require('br/knockout/workbench/PresentationModelViewer');
+				var presentationModelViewer2 = new PresentationModelViewer2(PresenterJsTreeModelFactory.createTreeModelFromPresentationModel(model));
+				document.body.querySelector('.workbench-component').appendChild(presentationModelViewer2.getElement());
+			}
 		</script>
 	</head>
 	<body>
@@ -55,5 +64,7 @@
 			</div>
 			<button onclick="showBrowserDialog()">Show Browser Dialog</button>
 		</form>
+		<div class="workbench-component">
+		</div>
 	</body>
 </html>
